# PWAsForAllLinux

./: .gitignore  CHANGELOG.md  CHANGELOG_MEJORAS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: build.yml
preview/: index.html
scripts/: build-packages.sh  install.sh
src/: app.rs  config.rs  i18n.rs  launcher.rs  main.rs  pwa.rs  utils.rs
